--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Meekdai",
-    "displayTitle":"eekdai",
+    "title":"七月的盛夏犹如寒冬",
+    "displayTitle":"七月的盛夏犹如寒冬",
     "subTitle":"童话是一种生活态度，仅此而已。",
     "homeUrl":"https://blog.meekdai.com",
     "avatarUrl":"https://meekdai.com/avatar.svg",
