--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "displayTitle":"七月的盛夏犹如寒冬",
     "subTitle":"童话是一种生活态度，仅此而已。",
     "homeUrl":"https://post.xynb.cc",
-    "avatarUrl":"",
-    "faviconUrl":"",
+    "avatarUrl":"https://github.com/LCorleone/LCorleone/blob/main/WechatIMG3.jpeg",
+    "faviconUrl":"https://github.com/LCorleone/LCorleone/blob/main/WechatIMG3.jpeg",
     "singlePage":[],
     "GMEEK_VERSION":"last"
 }
